# nrf52840-monitor-mode-gcc-gdb-only

./: .gitignore  CMakeLists.txt  README.md  main.c
SEGGER_MMD/: SEGGER_HardFaultHandler.c
pca10056/s140/armgcc/: Makefile
pca10056/s140/config/: sdk_config.h
